# remote-cnc

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.api  Dockerfile.worker  LICENSE.md  MainWindow.py  Makefile  README.md  alembic.ini  config.py  docker-compose.app.yml  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.production.yaml  docker-compose.production.yml  docker-compose.test.yaml  docker-compose.test.yml  docker-compose.worker.yaml  docker-compose.worker.yml  docker-compose.yaml  docker-compose.yml  environment.yml  justfile  main.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  worker.py
src/: .env.example  Dockerfile.api  Dockerfile.gateway  Dockerfile.worker  MainWindow.py  README.md  app.py  db_seeder.py  main.py  pyproject.toml  setup.cfg  start_worker.py
src/alembic/: env.py
src/alembic/versions/: 3235826a58f1_add_failed_status_to_tasks.py  5269cf543947_remove_rejected_status_from_tasks.py  6d8972b34033_add_name_for_tasks.py  8c8c413bf8ac_add_inventory_fks_to_tasks_table.py  dda662b6775d_create_users_table.py  ef375042cb3f_add_cancelled_status_to_tasks.py
src/api/: README.md  pyproject.toml
src/api/api/: exceptions.py  main.py
src/api/api/middleware/: authMiddleware.py  dbMiddleware.py  gatewayMiddleware.py  pubSubMiddleware.py  workerMiddleware.py
src/api/api/routes/: cncRoutes.py  fileRoutes.py  logRoutes.py  materialRoutes.py  monitorRoutes.py  rootRoutes.py  taskRoutes.py  toolRoutes.py  userRoutes.py  workerRoutes.py
src/api/middleware/: authMiddleware.py  dbMiddleware.py  pubSubMiddleware.py
src/api/routes/: cncRoutes.py  fileRoutes.py  logRoutes.py  materialRoutes.py  monitorRoutes.py  rootRoutes.py  taskRoutes.py  toolRoutes.py  userRoutes.py  workerRoutes.py
src/api/tests/: api_db.py  conftest.py  test_auth_middleware.py
src/api/tests/routes/: notest_file_routes.py  notest_material_routes.py  notest_task_routes.py  notest_tool_routes.py  notest_user_routes.py  test_cnc_routes.py  test_healthcheck.py  test_routes.py
src/api/tests/services/: test_security.py
src/components/: MenuButton.py  MenuButton.qss  UserCard.py  UserDataDialog.py
src/core/: pyproject.toml
src/core/alembic/: env.py
src/core/alembic/versions/: 3235826a58f1_add_failed_status_to_tasks.py  46ab6ab25408_add_file_analysis.py  47f8b3a7f591_add_unique_constraint_for_user_email.py  5269cf543947_remove_rejected_status_from_tasks.py  677cfe19a165_add_fks_to_tasks_table.py  6d8972b34033_add_name_for_tasks.py  8475035ee19e_create_tools_table.py  8c8c413bf8ac_add_inventory_fks_to_tasks_table.py  a4a5b53fb397_create_files_table.py  b45f388692dc_create_tasks_table.py  bb56f0eca8c5_add_admin_column_to_tasks.py  c5cba49f95bf_add_file_hash.py  dda662b6775d_create_users_table.py  ef375042cb3f_add_cancelled_status_to_tasks.py  f0fe8ee5571c_create_materials_table.py
src/core/core/: config.py
src/core/core/database/: base.py  exceptions.py  models.py  types.py  utils.py
src/core/core/schemas/: cnc.py  files.py  general.py  materials.py  session.py  tasks.py  tools.py  users.py  worker.py
src/core/core/utilities/: fileManager.py  files.py  loggerFactory.py  logs.py  logsInterpreter.py  redisPubSubManager.py  security.py  serial.py  storage.py  validators.py
src/database/: base.py  models.py  utils.py
src/database/models/: user.py
src/database/repositories/: fileRepository.py  materialRepository.py  taskRepository.py  toolRepository.py  userRepository.py
src/desktop/: MainWindow.py  README.md  config.ini  config.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/desktop/components/: ControllerStatus.py  Joystick.py  NavigationBar.py  TaskProgress.py  Terminal.py
src/desktop/components/buttons/: MainMenuButton.py  MenuButton.py
src/desktop/components/cards/: FileCard.py  MaterialCard.py  TaskCard.py  ToolCard.py  UserCard.py
src/desktop/components/dialogs/: AbsoluteMoveDialog.py  GrblConfigurationDialog.py  TaskDataDialog.py  UserDataDialog.py
src/desktop/desktop/: MainWindow.py  config.ini  config.py  main.py
src/desktop/desktop/components/: CodeEditor.py  (+10 more)
src/desktop/helpers/: cncWorkerMonitor.py  fileStreamer.py  grblSync.py  utils.py
src/desktop/mixins/: JogController.py
src/desktop/tests/: conftest.py  test_config.py  test_disconnection.py  test_main_window.py
src/desktop/views/: BaseListView.py  ControlView.py  FilesView.py  InventoryView.py  MainMenu.py  MonitorView.py  TasksView.py  UsersView.py
src/gateway/: dev-entrypoint.sh  pyproject.toml
src/gateway/gateway/: commandProcessor.py  fileExecutor.py  main.py  sessionManager.py  statusPublisher.py
src/mocks/: celery_mocks.py  worker_mocks.py
src/schemas/: logs.py  materials.py  tasks.py  users.py  worker.py
src/tests/: conftest.py
src/tests/api/: conftest.py  test_auth_middleware.py
src/tests/database/: test_models.py
src/tests/desktop/: test_main_window.py
src/tests/gcode/: test_gcode_analyser.py  test_gcode_file_sender.py
src/tests/grbl/: test_grbl_communicator.py  test_grbl_controller.py  test_grbl_initializer.py  test_grbl_line_parser.py  test_grbl_monitor.py  test_grbl_status.py  test_grbl_utils.py
src/tests/mocks/: celery.py  grbl.py  worker.py
src/tests/utils/: test_files.py  test_logs.py  test_security.py  test_serial.py
src/tests/worker/: test_tasks.py
src/utilities/: fileManager.py  loggerFactory.py  logs.py  logsInterpreter.py  security.py  storage.py  validators.py
src/utilities/gcode/: constants.py  gcodeAnalyser.py  gcodeFileSender.py
src/utilities/grbl/: constants.py  grblController.py  grblLineParser.py  grblMonitor.py  grblStatus.py  grblUtils.py  types.py
src/utilities/worker/: scheduler.py  utils.py  workerStatusManager.py
src/utils/: config.py  files.py
src/views/: MainMenu.py  UsersView.py
src/worker/: pyproject.toml  requirements-dev.txt
src/worker/tasks/: cnc.py  files.py
src/worker/tests/: test_tasks.py
src/worker/utils/: gcode2png.py  gcodeParser.py
src/worker/worker/: main.py
(+621 files in other folders)
