[project]
name = "cnc-api"
version = "0.1.0"
description = "REST API for CNC admin (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "cnc-core",
    "email-validator>=2.0,<3",
    "fastapi>=0.104,<1",
    "httpx>=0.24,<1",
    "python-multipart>=0.0.6",
    "regex",
    "sse-starlette>=2.1,<3",
    "uvicorn>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv.sources]
cnc-core = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.24,<1",
    "celery-types>=0.22",
]
