[project]
name = "cnc-core"
version = "0.1.0"
description = "Shared core library: database, utilities, schemas, and configuration"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=3.2,<4",
    "celery[redis]>=5.3,<6",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "PyJWT>=2.4,<3",
    "pyserial>=3.5,<4",
    "python-dotenv>=1.0,<2",
    "redis>=5.0,<6",
    "SQLAlchemy>=2.0,<3",
    "watchdog",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "alembic>=1.10,<2",
]
