[project]
name = "cnc-desktop"
version = "0.1.0"
description = "Desktop app for CNC admin (PyQt5)"
requires-python = ">=3.9"
dependencies = [
    "cnc-core",
    "PyQt5==5.15.11",
    "PyQtWebEngine>=5.15,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["desktop"]

[tool.uv.sources]
cnc-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest-qt>=4.4,<5",
    "pyqt5-stubs>=5.15",
    "celery-types>=0.22",
]
