[project]
name = "cnc-gateway"
version = "0.1.0"
description = "Dedicated CNC Gateway process: exclusive serial connection, priority command queue, session management"
requires-python = ">=3.12"
dependencies = [
    "cnc-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.uv.sources]
cnc-core = { workspace = true }
