[project]
name = "cnc-worker"
version = "0.1.0"
description = "Celery worker for CNC task execution"
requires-python = ">=3.9"
dependencies = [
    "cnc-core",
    "configobj>=5.0,<6",
    "mayavi>=4.8",
    "numpy>=1.26",
    "pillow>=10.4,<11",
    "PyQt5==5.15.11",
    "PyVirtualDisplay>=3.0,<4",
    "vtk>=9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.uv.sources]
cnc-core = { workspace = true }

[dependency-groups]
dev = [
    "celery-types>=0.22",
]
