[project]
name = "cnc-worker"
version = "0.1.0"
description = "Celery worker for CNC task execution"
requires-python = ">=3.12"
dependencies = [
    "cnc-core",
    "configobj>=5.0,<6",
    "mayavi>=4.8; sys_platform == 'linux'",
    "numpy>=1.26; sys_platform == 'linux'",
    "pillow>=10.4,<11",
    "PyQt5==5.15.11",
    "PyVirtualDisplay>=3.0,<4; sys_platform == 'linux'",
    "vtk>=9.3,<9.5; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.uv.sources]
cnc-core = { workspace = true }

[dependency-groups]
dev = [
    "celery-types>=0.22",
]
